# core_volume

./: .gitignore
ManiVault/: CMakeLists.txt
ManiVault/cmake/: MvCoreConfig.cmake.in  mv_install_dependencies.cmake.in
ManiVault/src/plugins/VolumeData/: CMakeLists.txt  README.md
ManiVault/src/plugins/VolumeData/src/: Common.h  InfoAction.cpp  InfoAction.h  Size3D.cpp  Size3D.h  Volume.h  VolumeData.cpp  VolumeData.h  VolumeData.json  Volumes.cpp  Volumes.h
